--- a/Angular_Frontend/src/styles.css
+++ b/Angular_Frontend/src/styles.css
@@ -1,1 +1,44 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  background-color: #213745;
+  color: black;
+  margin: 0px;
+  padding: 0;
+  line-height: 1.6;
+}
+.error-message {
+  color: red;
+  background-color: white;
+  border: 5px solid red;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #2c3e50;
+  margin-top: 20px;
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+
+p {
+  margin-bottom: 10px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid #ddd;
+  margin: 30px 0;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 20px;
+  }
+}
