Gyakori kérdések oldal megvalósítás

--- a/Angular_Frontend/src/app/components/gyik/gyik.component.html
+++ b/Angular_Frontend/src/app/components/gyik/gyik.component.html
@@ -1,1 +1,69 @@
-<p>gyik.component works!</p>
+<div class="faq-container">
+  <header class="faq-header">
+    <h1>Gyakran Ismételt Kérdések</h1>
+    <p class="intro">
+      A <strong>FCM DAPP</strong> platform működésével kapcsolatos
+      legfontosabb tudnivalók.
+    </p>
+  </header>
+
+  <div class="faq-grid">
+
+    <div class="faq-item">
+      <h3>Mi az FCM DAPP?</h3>
+      <p>Ez egy olyan szerződéskezelő rendszer, ahol a csapatok és játékosok blokkláncon kezelhetik szerződéseiket.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Miért a blokklánc?</h3>
+      <p>
+        A tranzakciók minden felhasználó számára láthatóak (de a bizalmas adatok titkosítva vannak). A blokklánc nem egy szerveren tárolódik, ezért a feltörése szinte lehetetlen.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Kik regisztrálhatnak?</h3>
+      <p>
+        Elsősorban profi labdraúgó klubboknak készült, de bármilyen foci csapat regisztrálhat. A klubbok mellet játékosok is regisztrálhatnak, ha csapatot keresenek maguknak.
+      </p>
+    </div>
+
+
+    <div class="faq-item">
+      <h3>Hogyan regisztrálhatok?</h3>
+      <p>
+        A játékosok, csapatok regisztrációkor pár adat megadásával és MetaMask pénztárcájuk csatolásával már használhatják is az oldalt. A regisztráció automatikusan blokkláncra kerül.
+      </p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Hogyan igazolhatok játékosokat? </h3>
+      <p>
+        A <a routerLink="/player-search" routerLinkActive="active-link" >Játékos keresés</a>-e oldalon keresgélhet a játékosok között. A szerződés kötés egy gombnyomással elindítható. Igazolhatsz játékosokat akár más csapatoktól is.
+      </p>
+    </div>
+
+
+    <div class="faq-item">
+      <h3>Hogyan lehet csapatot váltani?</h3>
+      <p>
+        Ha Ön egy csapat tagja és még élő szerződése van, akkor is felmondhatja a szerződését egy bizonyos díj fejében amit a csapatával közösen határoz meg.<br>A szerződése lejáratakor automatikusan kap egy tranzakciót, amelyet elfogadva ingyen távozik a csapatától.
+      </p>
+    </div>
+
+
+    <div class="faq-item">
+      <h3>Milyen funkciói vannak az oldalnak?</h3>
+      <p>A már ismert játékos igazolás mellett, kezelheti labdarúgók heti szerződéseit, van lehetőség a játékosnak történő bónusz küldésére vagy büntetés fejében befizetendő összeget kérni.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Nem töltenek be a tranzakcióim. Mit tegyek?</h3>
+      <p>Ha a tranzakciók nem töltenek be, akkor nyissa meg a metamaszk fiókját a felső sorban a bővítmények között, ezzel frissíti a tárca információit. Ezután frissítse az oldalt.</p>
+    </div>
+
+    
+
+    
+  </div>
+</div>
